--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Xv8-wC-Jqe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wpq-Zw-PGg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -264,7 +264,65 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1221" y="635"/>
+            <point key="canvasLocation" x="1231" y="553"/>
+        </scene>
+        <!--Launch View Controller-->
+        <scene sceneID="4Pc-6f-1tA">
+            <objects>
+                <viewController id="wpq-Zw-PGg" customClass="LaunchViewController" customModule="eventBox" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="z97-bc-qAg"/>
+                        <viewControllerLayoutGuide type="bottom" id="S95-NF-jA7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1xI-iX-C69">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KpJ-pQ-ZA5">
+                                <rect key="frame" x="20" y="274.5" width="560" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="7SI-Ah-DAk"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Event">
+                                        <attributes>
+                                            <color key="NSColor" red="0.39922991708009692" green="1" blue="0.59635763360438587" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="42" name="Avenir-Heavy"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="Box">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="42" name="Avenir-Heavy"/>
+                                            <font key="NSOriginalFont" size="42" name="Avenir-Heavy"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.19215686274509802" green="0.19215686274509802" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="KpJ-pQ-ZA5" firstAttribute="leading" secondItem="1xI-iX-C69" secondAttribute="leadingMargin" id="4cf-mL-3zc"/>
+                            <constraint firstItem="KpJ-pQ-ZA5" firstAttribute="centerY" secondItem="1xI-iX-C69" secondAttribute="centerY" id="KDa-hX-X1v"/>
+                            <constraint firstItem="KpJ-pQ-ZA5" firstAttribute="trailing" secondItem="1xI-iX-C69" secondAttribute="trailingMargin" id="Qv0-EO-IB4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="DNh-91-MmY" kind="presentation" identifier="NoUserSegue" id="PaN-zE-O74"/>
+                        <segue destination="Xv8-wC-Jqe" kind="show" identifier="LoggedInSegue" id="f9i-1I-7RQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ET-Ce-WxV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="478" y="1558"/>
         </scene>
         <!--Dashboard View Controller-->
         <scene sceneID="I3J-B6-TAC">
@@ -1200,10 +1258,10 @@
             </objects>
             <point key="canvasLocation" x="1221" y="3368"/>
         </scene>
-        <!--View Controller-->
+        <!--Onboarding View Controller-->
         <scene sceneID="Way-MD-Tww">
             <objects>
-                <viewController id="DNh-91-MmY" sceneMemberID="viewController">
+                <viewController id="DNh-91-MmY" customClass="OnboardingViewController" customModule="eventBox" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="itM-hx-Tid"/>
                         <viewControllerLayoutGuide type="bottom" id="83S-Qn-zxb"/>
@@ -1212,10 +1270,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21D-5h-87g">
-                                <rect key="frame" x="20" y="248" width="560" height="103"/>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="ae8-2z-ti9">
+                                <rect key="frame" x="256" y="485" width="89" height="15"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="103" id="PqM-3Q-ZCD"/>
+                                    <constraint firstAttribute="height" constant="15" id="227-x5-KFL"/>
+                                    <constraint firstAttribute="width" constant="89" id="AWP-JU-kZB"/>
+                                </constraints>
+                            </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u7Y-SY-3MG">
+                                <rect key="frame" x="20" y="516" width="560" height="64"/>
+                                <color key="backgroundColor" red="0.16470588235294117" green="0.31372549019607843" blue="0.5725490196078431" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="Yoc-rc-0rq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="21"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Login with Facebook"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="onLoginTapped:" destination="DNh-91-MmY" eventType="touchUpInside" id="7ZE-Yg-fAM"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21D-5h-87g">
+                                <rect key="frame" x="20" y="28" width="560" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="PqM-3Q-ZCD"/>
                                 </constraints>
                                 <attributedString key="attributedText">
                                     <fragment content="Event">
@@ -1241,41 +1324,22 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="ae8-2z-ti9">
-                                <rect key="frame" x="256" y="485" width="89" height="15"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="227-x5-KFL"/>
-                                    <constraint firstAttribute="width" constant="89" id="AWP-JU-kZB"/>
-                                </constraints>
-                            </pageControl>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u7Y-SY-3MG">
-                                <rect key="frame" x="20" y="516" width="560" height="64"/>
-                                <color key="backgroundColor" red="0.16470588235294117" green="0.31372549019607843" blue="0.5725490196078431" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="Yoc-rc-0rq"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="21"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Login with Facebook"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="21D-5h-87g" firstAttribute="centerY" secondItem="WhF-Il-gUI" secondAttribute="centerY" id="2Ub-Gb-JSq"/>
                             <constraint firstItem="21D-5h-87g" firstAttribute="trailing" secondItem="WhF-Il-gUI" secondAttribute="trailingMargin" id="6aC-f0-Zk5"/>
                             <constraint firstItem="u7Y-SY-3MG" firstAttribute="trailing" secondItem="WhF-Il-gUI" secondAttribute="trailingMargin" id="Gs7-eW-mr2"/>
                             <constraint firstItem="83S-Qn-zxb" firstAttribute="top" secondItem="u7Y-SY-3MG" secondAttribute="bottom" constant="20" id="R4H-IV-GDE"/>
                             <constraint firstItem="u7Y-SY-3MG" firstAttribute="top" secondItem="ae8-2z-ti9" secondAttribute="bottom" constant="16" id="YYt-rc-Z0w"/>
                             <constraint firstItem="21D-5h-87g" firstAttribute="leading" secondItem="WhF-Il-gUI" secondAttribute="leadingMargin" id="bFF-HD-h66"/>
                             <constraint firstItem="ae8-2z-ti9" firstAttribute="centerX" secondItem="WhF-Il-gUI" secondAttribute="centerX" id="eX5-X5-uKH"/>
+                            <constraint firstItem="21D-5h-87g" firstAttribute="top" secondItem="itM-hx-Tid" secondAttribute="bottom" constant="8" id="fVb-zL-Rcp"/>
                             <constraint firstItem="u7Y-SY-3MG" firstAttribute="leading" secondItem="WhF-Il-gUI" secondAttribute="leadingMargin" id="uKI-pd-b9U"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="Xv8-wC-Jqe" kind="show" identifier="LoggedInSegue" id="1HE-x6-EET"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="myi-Jq-Rfa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1297,7 +1361,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BRC-87-z98" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1949" y="635"/>
+            <point key="canvasLocation" x="1959" y="553"/>
         </scene>
     </scenes>
     <resources>
@@ -1316,4 +1380,7 @@
         <image name="noun_multiply_315673" width="150" height="150"/>
         <image name="people-party-dancing-music" width="1920" height="1275"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="f9i-1I-7RQ"/>
+    </inferredMetricsTieBreakers>
 </document>
