--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -1092,6 +1092,9 @@
                                                 <real key="value" value="27"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="onCreateTapped:" destination="bOD-nt-Ovi" eventType="touchUpInside" id="YfQ-h2-g2B"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1154,12 +1157,112 @@
                         <outlet property="eventDateTextField" destination="Aei-fV-iO7" id="1Pe-Sn-upH"/>
                         <outlet property="eventNameTextField" destination="3P3-n7-nqK" id="Qcc-qT-qhH"/>
                         <outlet property="eventTimeTextField" destination="dve-5z-3Sj" id="BKf-A2-Wx0"/>
+                        <segue destination="er3-It-tne" kind="presentation" identifier="TimePop" id="ifi-ug-6kN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jDQ-tJ-NHU" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="QAt-v7-KET" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1221" y="2629"/>
+        </scene>
+        <!--Time View Controller-->
+        <scene sceneID="NZv-SJ-gTz">
+            <objects>
+                <viewController modalPresentationStyle="overFullScreen" id="er3-It-tne" customClass="TimeViewController" customModule="eventBox" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WsO-fx-CKR"/>
+                        <viewControllerLayoutGuide type="bottom" id="scF-cj-haU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gzp-fp-TSv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="eFv-w8-1vH">
+                                <rect key="frame" x="183" y="412" width="235" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NtK-lj-3BK">
+                                        <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="64" id="agh-QE-g7X"/>
+                                            <constraint firstAttribute="width" constant="64" id="qhs-0F-8RP"/>
+                                        </constraints>
+                                        <color key="tintColor" red="1" green="0.32016387369999999" blue="0.27679930559999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" image="noun_delete_45887"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="32"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="onCancelTapped:" destination="er3-It-tne" eventType="touchUpInside" id="b2X-uP-rJv"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IDl-II-2eC">
+                                        <rect key="frame" x="171" y="0.0" width="64" height="64"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="64" id="DOR-av-c7B"/>
+                                            <constraint firstAttribute="width" constant="64" id="mkG-qp-eRm"/>
+                                        </constraints>
+                                        <color key="tintColor" red="0.35686274509999999" green="1" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" image="noun_check_45890"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="32"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="onAcceptCheck:" destination="er3-It-tne" eventType="touchUpInside" id="dIZ-1w-qhR"/>
+                                            <action selector="onCheckTapped:" destination="Ur1-SO-Gec" eventType="touchUpInside" id="lcv-Sn-cv9"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ps9-MR-1Me">
+                                <rect key="frame" x="153" y="124" width="295" height="280"/>
+                                <subviews>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="mam-98-lDh">
+                                        <rect key="frame" x="10" y="10" width="275" height="260"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="260" id="LPJ-7M-dDh"/>
+                                            <constraint firstAttribute="width" constant="275" id="P4h-0Z-650"/>
+                                        </constraints>
+                                        <date key="date" timeIntervalSinceReferenceDate="477698516.33521599">
+                                            <!--2016-02-20 22:01:56 +0000-->
+                                        </date>
+                                    </datePicker>
+                                </subviews>
+                                <color key="backgroundColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="mam-98-lDh" firstAttribute="centerX" secondItem="Ps9-MR-1Me" secondAttribute="centerX" id="6yN-ki-Wta"/>
+                                    <constraint firstItem="mam-98-lDh" firstAttribute="centerY" secondItem="Ps9-MR-1Me" secondAttribute="centerY" id="QOw-AK-7cy"/>
+                                    <constraint firstAttribute="height" constant="280" id="eop-9t-Iwv"/>
+                                    <constraint firstAttribute="width" constant="295" id="lgl-Ot-xg9"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="eFv-w8-1vH" firstAttribute="top" secondItem="Ps9-MR-1Me" secondAttribute="bottom" constant="8" id="11V-JV-hAK"/>
+                            <constraint firstItem="Ps9-MR-1Me" firstAttribute="centerX" secondItem="gzp-fp-TSv" secondAttribute="centerX" id="EnU-Dc-sfi"/>
+                            <constraint firstItem="eFv-w8-1vH" firstAttribute="leading" secondItem="Ps9-MR-1Me" secondAttribute="leading" constant="30" id="MdJ-vF-BMB"/>
+                            <constraint firstItem="Ps9-MR-1Me" firstAttribute="centerY" secondItem="gzp-fp-TSv" secondAttribute="centerY" constant="-36" id="v7m-X1-QOH"/>
+                            <constraint firstItem="eFv-w8-1vH" firstAttribute="trailing" secondItem="Ps9-MR-1Me" secondAttribute="trailing" constant="-30" id="zKr-Yg-24I"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="timePicker" destination="mam-98-lDh" id="Eg9-ju-Z2K"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Odg-m8-W4G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="890" y="3429"/>
         </scene>
         <!--Calendar View Controller-->
         <scene sceneID="4Jq-xB-dMa">
@@ -1256,7 +1359,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Da0-4J-NKa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1221" y="3368"/>
+            <point key="canvasLocation" x="1552" y="3429"/>
         </scene>
         <!--Onboarding View Controller-->
         <scene sceneID="Way-MD-Tww">
