--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -407,17 +407,11 @@
                                     <userDefinedRuntimeAttribute type="color" keyPath="selectedLabelColor">
                                         <color key="value" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="thumbColor">
-                                        <color key="value" red="0.35686274509999999" green="1" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="unselectedLabelColor">
                                         <color key="value" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                        <real key="value" value="2"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                        <color key="value" red="0.35686274509999999" green="1" blue="0.52549019610000003" alpha="0.5" colorSpace="calibratedRGB"/>
+                                        <real key="value" value="1"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
@@ -434,7 +428,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EventCell" id="wAw-gk-EoK">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EventCell" id="wAw-gk-EoK" customClass="EventCollectionViewCell" customModule="eventBox" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="-2" width="300" height="445.5"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -444,7 +438,7 @@
                                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T79-L2-f7U">
                                                     <rect key="frame" x="18" y="18" width="264" height="409.5"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="christmas-xmas-gifts-presents" translatesAutoresizingMaskIntoConstraints="NO" id="8NZ-mQ-pNH">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="8NZ-mQ-pNH">
                                                             <rect key="frame" x="0.0" y="0.0" width="264" height="409.5"/>
                                                         </imageView>
                                                         <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6rl-zO-PHf">
@@ -597,7 +591,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="snw-ec-z56" id="uO9-i6-Xxj"/>
+                        <outlet property="eventsCollectionView" destination="snw-ec-z56" id="vlh-p9-B9H"/>
+                        <outlet property="newEventButton" destination="9Bi-S7-ccn" id="SqJ-VM-8Gd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dxg-zM-2vu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1587,12 +1582,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1" width="4608" height="3072"/>
         <image name="Gear" width="22" height="22"/>
         <image name="LeftAngle" width="84" height="84"/>
         <image name="PlusButton" width="75" height="75"/>
         <image name="RightAngle" width="84" height="84"/>
         <image name="Shadow" width="10" height="200"/>
-        <image name="christmas-xmas-gifts-presents" width="4608" height="3072"/>
         <image name="fb-art" width="200" height="200"/>
         <image name="noun_bell_10289" width="150" height="150"/>
         <image name="noun_calendar_138379" width="150" height="150"/>
